--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Modak&family=Ultra&display=swap');
 
+:root {
+    color-scheme: light dark;
+}
+
 body {
     margin: 0; 
     font-family: "Ultra", serif;
@@ -10,7 +14,7 @@ body {
     flex-direction: column;
     justify-content: center; 
     align-items: center; 
-    background: rgb(26, 24, 24);
+    background: light-dark(#ffffff, rgb(26, 24, 24));
     height: 100vh;
     margin: 0; 
     font-family: "Ultra", serif;
@@ -21,7 +25,6 @@ body {
     display: flex;
     border-radius: 15px;
     flex-direction: column;
-    background-color: rgb(117, 117, 117);
     overflow-x: hidden;
 }
 
@@ -29,14 +32,14 @@ body {
     height: 80%;
     display: flex;
     flex-direction: column;
-    background-color: rgb(172, 167, 167);
+    background-color: light-dark(rgb(236, 236, 236), rgb(88, 88, 88));
 }
 
 .row {
     display: flex;
     width: 100%;
     flex: 1; 
-    border-bottom: 2px solid black;
+    border-bottom: 2px solid light-dark(rgb(0, 0, 0), rgb(255, 255, 255));
     box-sizing: border-box;
 }
 
@@ -45,8 +48,9 @@ body {
     justify-content: center;
     align-items: center;
     flex: 1;
-    border-left: 0.5px solid black;
-    border-right: 0.5px solid black;
+    color: light-dark(rgb(0, 0, 0), rgb(255, 255, 255));
+    border-left: 0.5px solid light-dark(rgb(0, 0, 0), rgb(255, 255, 255)); 
+    border-right: 0.5px solid light-dark(rgb(0, 0, 0), rgb(255, 255, 255)); 
 }
 
 .input-section {
@@ -54,7 +58,7 @@ body {
     flex-direction: row;
     width: 100%;
     height: 20%;
-    background-color: aliceblue;
+    background-color: light-dark(rgb(199, 199, 199), rgb(58, 58, 58)); 
 }
 
 .input-case {
@@ -62,25 +66,22 @@ body {
     justify-content: center;
     align-items: center;
     flex: 1;
-    border: 1px solid black;
+    border: 1px solid light-dark(rgb(0, 0, 0), rgb(255, 255, 255));
 }
 
 .valid {
     background-color: #30c230; 
-    color: black; 
     transition: background-color 0.5s ease, transform 0.3s ease;
     animation: pop 0.4s ease-in-out;
 }
 
 .almost {
     background-color: #f7d40f; 
-    color: black; 
     transition: background-color 0.5s ease, transform 0.3s ease;
 }
 
 .fail {
     background-color: #ec2828; 
-    color: black; 
     transition: background-color 0.5s ease, transform 0.3s ease;
 }
 
@@ -111,7 +112,7 @@ body {
     .wordle {
         width: 60vh; 
         height: 60vh; 
-        border: 0.5vh solid black;
+        border: 0.5vh solid light-dark(rgb(0, 0, 0), rgb(255, 255, 255));
     }
 
     .option {
@@ -134,7 +135,7 @@ body {
     .wordle {
         width: 60vw; 
         height: 60vw; 
-        border: 0.5vw solid black;
+        border: 0.5vw solid light-dark(rgb(0, 0, 0), rgb(255, 255, 255)); 
     }
 
     .option {
