--- a/style.css
+++ b/style.css
@@ -25,21 +25,18 @@ body {
     display: flex;
     border-radius: 15px;
     flex-direction: column;
-    overflow-x: hidden;
 }
 
 .grid {
     height: 80%;
     display: flex;
     flex-direction: column;
-    background-color: light-dark(rgb(236, 236, 236), rgb(88, 88, 88));
 }
 
 .row {
     display: flex;
     width: 100%;
     flex: 1; 
-    border-bottom: 2px solid light-dark(rgb(0, 0, 0), rgb(255, 255, 255));
     box-sizing: border-box;
 }
 
@@ -47,26 +44,30 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    flex: 1;
+    flex: 1 1;
     color: light-dark(rgb(0, 0, 0), rgb(255, 255, 255));
-    border-left: 0.5px solid light-dark(rgb(0, 0, 0), rgb(255, 255, 255)); 
-    border-right: 0.5px solid light-dark(rgb(0, 0, 0), rgb(255, 255, 255)); 
+    border: 1.5px solid light-dark(rgb(0, 0, 0), rgb(255, 255, 255)); 
+    border-radius: 10%;
+    margin: 1%;
+    aspect-ratio: 1;
 }
 
 .input-section {
     display: flex;
     flex-direction: row;
     width: 100%;
-    height: 20%;
-    background-color: light-dark(rgb(199, 199, 199), rgb(58, 58, 58)); 
 }
 
 .input-case {
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: light-dark(rgb(199, 199, 199), rgb(58, 58, 58)); 
+    border: 1.5px solid light-dark(rgb(0, 0, 0), rgb(255, 255, 255));
+    border-radius: 10%;
+    margin: 1%;
     flex: 1;
-    border: 1px solid light-dark(rgb(0, 0, 0), rgb(255, 255, 255));
+    aspect-ratio: 1;
 }
 
 .valid {
@@ -110,9 +111,8 @@ body {
     }
 
     .wordle {
-        width: 60vh; 
+        width: 48vh; 
         height: 60vh; 
-        border: 0.5vh solid light-dark(rgb(0, 0, 0), rgb(255, 255, 255));
     }
 
     .option {
@@ -124,6 +124,7 @@ body {
 }
   
 @media (orientation: portrait) {
+    
     .input-case {
         font-size: 6vw;
     }
@@ -133,9 +134,8 @@ body {
     }
 
     .wordle {
-        width: 60vw; 
+        width: 48vw; 
         height: 60vw; 
-        border: 0.5vw solid light-dark(rgb(0, 0, 0), rgb(255, 255, 255)); 
     }
 
     .option {
